--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Git y GitHub</title>
 </head>
 <body>
+    <header>
+        <h1>Header</h1>
+    </header>
     <div class="container">
         <h2>XD</h2>
     </div>
+
 </body>
 </html>
