--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
     <header>
-        <h1>Header</h1>
+        <h1>Experimento</h1>
     </header>
     <div class="container">
         <h2>XD</h2>
     </div>
+
+    <footer>
+        <p>Este es un experimento en nuestra rama experimento</p>
+    </footer>
 
 </body>
 </html>
